feat(course): implement category and courses management API with CRUD operations